# oseda-cli

./: .gitignore  Cargo.toml  Docs.md  LICENSE.md  README.md  Usage.md  build.sh  codebook.toml
.github/workflows/: rust.yml
img/: README.md  embed-img.sh
scripts/: README.md  build.sh  curl-install.sh  install.sh  publish.sh  test-init.sh  ubuntu-test-install.sh
scripts/e2e-testing/: README.md  ubuntu-test-install.sh
src/: categories.rs  check.rs  color.rs  config.rs  github.rs  init.rs  lib.rs  main.c  main.rs  net.rs  run.rs  tags.rs  template.rs
src/cmd/: check.rs  deploy.rs  fork.rs  init.rs  mod.rs  run.rs
src/static/md-templates/: slides.md
src/utils/: utils.c  utils.h
