[package]
name = "oseda-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oseda"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
